--- a/LocalAngle.Covid.Vaccination.Agent/LocalAngle.Covid.Vaccination.Agent.csproj
+++ b/LocalAngle.Covid.Vaccination.Agent/LocalAngle.Covid.Vaccination.Agent.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.95.4" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.31" />
+    <PackageReference Include="log4net" Version="2.0.12" />
   </ItemGroup>
 
   <ItemGroup>
