--- a/LocalAngle.Covid.Vaccination.Agent/App.config
+++ b/LocalAngle.Covid.Vaccination.Agent/App.config
@@ -15,11 +15,15 @@
         <conversionPattern value="%message%newline" />
       </layout>
     </appender>
-    <appender name="OutputDebugStringAppender" type="log4net.Appender.OutputDebugStringAppender">
+    <appender name="OutputDebugStringAppender" type="log4net.Appender.DebugAppender">
       <threshold value="DEBUG" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+        <conversionPattern value="%date %-5level - %message%newline" />
       </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <param name="LevelMin" value="VERBOSE" />
+        <param name="LevelMax" value="DEBUG" />
+      </filter>
     </appender>
   </log4net>
 </configuration>
