--- a/LocalAngle.Covid.Vaccination.Agent/LocalAngle.Covid.Vaccination.Agent.csproj
+++ b/LocalAngle.Covid.Vaccination.Agent/LocalAngle.Covid.Vaccination.Agent.csproj
@@ -1,18 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.95.4" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.33" />
     <PackageReference Include="log4net" Version="2.0.12" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\LocalAngle.Covid.Vaccination.Models\LocalAngle.Covid.Vaccination.Models.csproj" />
   </ItemGroup>
-
 </Project>
